<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros1_lifecycle_msgs</name>
  <version>0.1.0</version>
  <description>A package containing some lifecycle related message and service definitions.</description>
  <maintainer email="ruddick@carbon.ai">Ruddick Lawrence</maintainer>
  <license>Apache License 2.0</license>

  <author>Karsten Knese</author>
  <author>Ruddick Lawrence</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
